Created content example-1

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 </head>
 <body>
     <div class="container">
-<div class="row">
-<div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem rerum sint corporis asperiores culpa enim esse? Enim possimus sint mollitia reprehenderit, dolorem molestias vel eaque perspiciatis, vitae nihil dolorum.</div>
-<div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem rerum sint corporis asperiores culpa enim esse? Enim possimus sint mollitia reprehenderit, dolorem molestias vel eaque perspiciatis, vitae nihil dolorum.</div>
-<div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem rerum sint corporis asperiores culpa enim esse? Enim possimus sint mollitia reprehenderit, dolorem molestias vel eaque perspiciatis, vitae nihil dolorum.</div>
-<div class="col">Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit autem rerum sint corporis asperiores culpa enim esse? Enim possimus sint mollitia reprehenderit, dolorem molestias vel eaque perspiciatis, vitae nihil dolorum.</div>
-</div>
+        <div class="example-1">
+        <div class="row">
+            <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis, fugiat laudantium, placeat repellat quod unde porro cumque consequatur similique expedita, aliquam alias ut laboriosam. Est incidunt nihil non tempora nulla.</div>
+            <div class="col-3">Quisquam voluptate quibusdam optio recusandae iusto magnam, ad modi laudantium, dignissimos porro reiciendis? Obcaecati aliquid, numquam repellat molestiae excepturi sint recusandae neque, animi voluptas beatae voluptates impedit consequuntur, sit nam!</div>
+            <div class="col-3">Repellat, temporibus iste ipsam iusto est necessitatibus odio. Assumenda consequatur blanditiis incidunt laudantium reiciendis voluptatem fugit perspiciatis odio eligendi dolorem, neque totam dolore illo, sed harum iste amet fuga corrupti.</div>
+            <div class="col-3">Ipsa quod, tenetur asperiores, dolorem laborum repellendus voluptate nobis ipsum qui laudantium praesentium laboriosam. Nesciunt, a? Beatae repellendus animi exercitationem reiciendis ullam velit ipsam provident voluptas? Quae assumenda quia ipsum?</div>
+        </div>
     </div>
+</div>
+
 </body>
 </html>
