--- a/index.html
+++ b/index.html
@@ -18,6 +18,39 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="example-2">
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo maxime beatae debitis dolorem ab. Officia veniam eum a cum, aspernatur maiores nulla magnam impedit illum voluptate explicabo laboriosam blanditiis error.</div>
+    <div class="row">
+        <div class="col-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus necessitatibus possimus, odit nulla explicabo at dicta ratione error sequi. Possimus tenetur aut minus saepe amet rerum a rem repellat nam.</div>
+        <div class="col-3">A labore excepturi iste modi minima, molestias, adipisci veniam ullam vel amet eveniet neque sint cumque nobis aliquid corporis libero. Doloremque minima optio nulla quae, eum laboriosam obcaecati deserunt corrupti?</div>
+        <div class="col-3">Dolores, reprehenderit itaque reiciendis nostrum nam ullam atque natus eligendi perferendis est dolorem dolore nihil vero. Architecto temporibus pariatur enim dicta dolorem obcaecati eos quos? Odit doloribus repellendus explicabo ad!</div>
+        <div class="col-3">Nesciunt quam eligendi suscipit nam at totam obcaecati? Eos, quo aut id necessitatibus nihil nobis quasi culpa ipsum deserunt non. Impedit fugiat adipisci, rerum corporis alias modi recusandae culpa beatae?</div>
+    </div>
+</div>
+</div>
+<div class="container">
+    <div class="example-3">
+    <div class="row">
+        
+        <div class="col-3">
+            <div class="example-3">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta vitae ipsam cumque labore eligendi nihil, voluptas maxime impedit quam, obcaecati deleniti! Nobis molestiae deserunt maiores modi hic mollitia laudantium. Fugit.</div>
+        </div>
+        <div class="col-3">
+            <div class="example-3">
+            Voluptas libero voluptatem assumenda ipsa atque deleniti quis aspernatur nihil quisquam expedita aliquid illo non fugit deserunt modi, nemo officiis pariatur similique labore quae maxime magnam qui. Possimus, sit non.</div>
+        </div>
+        <div class="col-3">
+            <div class="example-3">
+            Recusandae sed sunt sint! Labore similique tempore unde odio inventore reiciendis voluptatum et maxime eligendi molestias magni quos excepturi minus magnam distinctio impedit accusamus cum quaerat neque aspernatur, ex vitae!</div>
+        </div>
+        <div class="col-3">
+            <div class="example-3">Fugiat, quidem. Possimus at laborum labore a, impedit fugit iure. Ipsam fuga harum quibusdam nemo libero maxime earum amet dolor tempore vel, labore laudantium expedita architecto suscipit. Dicta, vitae provident?</div>
+        </div>
+    </div>
+</div>
+</div>
 
 </body>
 </html>
