added row col-3

--- a/index.html
+++ b/index.html
@@ -51,6 +51,13 @@
     </div>
 </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-4">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam veniam perspiciatis quidem repudiandae quasi ab voluptate magnam expedita maiores error quod optio debitis possimus, obcaecati amet maxime sed molestiae libero!</div>
+        <div class="col-4">Eveniet repudiandae atque iusto dolor odio dolorum commodi nulla temporibus alias, minima quo doloremque. Atque ullam facilis ab consectetur nemo cum architecto aut fugit placeat assumenda! Praesentium, quos. Quisquam, provident.</div>
+        <div class="col-4">Deserunt cum veniam magnam hic, animi atque dolor beatae! Ad quisquam rerum expedita, maxime at voluptates eos porro vero nemo dolorem. Doloremque numquam, aliquam deleniti dicta obcaecati natus nobis alias.</div>
+    </div>
+</div>
 
 </body>
 </html>
