added row and 2 columns

--- a/index.html
+++ b/index.html
@@ -58,6 +58,18 @@
         <div class="col-4">Deserunt cum veniam magnam hic, animi atque dolor beatae! Ad quisquam rerum expedita, maxime at voluptates eos porro vero nemo dolorem. Doloremque numquam, aliquam deleniti dicta obcaecati natus nobis alias.</div>
     </div>
 </div>
+<div class="container">
+    <div class="row">
+        <div class="col-3"></div>
+        <div class="col-3"></div>
+        <div class="col-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci alias a inventore, autem aut iusto? Hic distinctio, praesentium ullam sunt aperiam officiis veniam quaerat dolores. Odio nesciunt maxime eum quae.
+
+        </div>
+        <div class="col-3">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem ullam corporis quibusdam sit consectetur nisi ut sunt quia. Mollitia voluptates quasi nemo necessitatibus assumenda illum, esse quibusdam quia delectus magni.
+        </div>
+    </div>
+</div>
 
 </body>
 </html>
